# wallpaper-engine-kde-plugin

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  lint.yml  tests.yml
bench/: README.md  bench.sh  scenarios.json
plugin/contents/config/: main.xml
plugin/contents/ui/: Common.qml  Pyext.qml  WallpaperListModel.qml  config.qml  main.qml
plugin/contents/ui/backend/: Mpv.qml  QtMultimedia.qml  Scene.qml
plugin/contents/ui/page/: AboutPage.qml  SettingPage.qml  WallpaperPage.qml
src/: CMakeLists.txt  FileHelper.cpp  FileHelper.hpp  MouseGrabber.cpp  MouseGrabber.hpp  PluginInfo.cpp  TTYSwitchMonitor.cpp  TTYSwitchMonitor.hpp  plugin.cpp
src/backend_mpv/: CMakeLists.txt  MpvBackend.cpp  MpvBackend.hpp  qthelper.hpp
src/backend_mpv/standalone_viewer/: qmlviewer.cpp
src/backend_scene/qml_helper/: SceneBackend.cpp  SceneBackend.hpp
src/backend_scene/src/: SceneWallpaper.cpp  SceneWallpaper.hpp  SpriteAnimation.hpp  WPJson.cpp  WPParticleParser.cpp  WPSceneParser.cpp  WPShaderParser.cpp  WPShaderValueUpdater.cpp  WPTexImageParser.cpp
src/backend_scene/src/Scene/include/Scene/: Scene.h
src/backend_scene/src/Test/: CMakeLists.txt
src/backend_scene/src/Timer/: FrameTimer.cpp
src/backend_scene/src/Timer/include/Timer/: FrameTimer.hpp
src/backend_scene/src/Utils/include/Utils/: String.h
src/backend_scene/src/VulkanRender/: CopyPass.cpp  CustomShaderPass.cpp  FinPass.cpp  VulkanRender.cpp
src/backend_scene/src/wpscene/: WPImageObject.cpp
tests/: CMakeLists.txt  tst_filehelper.cpp
